argocd-managed/drinkn-hooks/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-github-api
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    # https://api.github.com/meta
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      - ipBlock:
          cidr: 192.30.252.0/22
      - ipBlock:
          cidr: 185.199.108.0/22
      - ipBlock:
          cidr: 140.82.112.0/20
      - ipBlock:
          cidr: 143.55.64.0/20
      - ipBlock:
          cidr: 2a0a:a440::/29
      - ipBlock:
          cidr: 2606:50c0::/32
      - ipBlock:
          cidr: 20.201.28.148/32
      - ipBlock:
          cidr: 20.205.243.168/32
      - ipBlock:
          cidr: 20.87.245.6/32
      - ipBlock:
          cidr: 4.237.22.34/32
      - ipBlock:
          cidr: 20.207.73.85/32
      - ipBlock:
          cidr: 20.27.177.116/32
      - ipBlock:
          cidr: 20.200.245.245/32
      - ipBlock:
          cidr: 20.175.192.149/32
      - ipBlock:
          cidr: 20.233.83.146/32
      - ipBlock:
          cidr: 20.29.134.17/32
      - ipBlock:
          cidr: 20.199.39.228/32
      - ipBlock:
          cidr: 20.217.135.0/32
      - ipBlock:
          cidr: 4.225.11.201/32
      - ipBlock:
          cidr: 4.208.26.200/32
      - ipBlock:
          cidr: 20.26.156.210/32
      ports:
        - port: 443
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
